--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+vehicle/
+
 
 # Spyder project settings
 .spyderproject
@@ -169,3 +171,4 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+artifact/
