--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -2,7 +2,7 @@ name: Deploy Application Docker Image to EC2 instance
 
 on:
   push:
-    branches: [master,main]
+    branches: [main]
 
 jobs:
   Continuous-Integration:
@@ -32,7 +32,9 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .  
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+      
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+
 
   Continuous-Deployment:
     needs: Continuous-Integration
