--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -31,7 +31,7 @@ jobs:
           IMAGE_TAG: latest
         run: |
          
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG Vehical_Insurance_project\Dockerfile
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .\Dockerfile
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
